@@ -17,7 +17,7 @@ public class SmallExample {
         Employee johny = employees.add("Johny", "Goe", 20000, true, new byte[] {2,3,4}, new Date(), true, null);
         Employee nikolche = employees.insert(1, "Nikolche", "Mihajlovski", 30000, false, new byte[] { 4, 5 }, new Date(), 1234, null);
 
-        TightDB.print("Employees", employees);
+        System.out.println(employees.toString());
     }
 
 
