@@ -13,19 +13,20 @@ public class Experiment {
     	test3();
     }
     
-    public static Table getInvalidTable() {
+    public static Table getTable() {
         Group g = new Group();
     	Table t = g.getTable("testTable");
     	t.addColumn(ColumnType.ColumnTypeString, "test");
-    	g.close();
     	
     	return t;
     }
 
     public static void test3() {
-    	Table t = getInvalidTable();
+    	Table t = getTable();
+    	//g.close();
     	t.add("hej");
-    	    	
+    	
+    	System.out.println(t);
     }
     
     public static void test2() {
