@@ -2,8 +2,6 @@ package com.tightdb.typed;
 
 import static org.testng.AssertJUnit.assertEquals;
 
-import java.util.Date;
-
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
@@ -18,7 +16,6 @@ import com.tightdb.typed.AbstractTableOrView;
 public class TableDataOperationsTest extends AbstractDataOperationsTest {
 
     private TestEmployeeTable employees;
-    private Object[][] phones;
 
     @Override
     protected AbstractTableOrView<TestEmployeeRow, TestEmployeeView, TestEmployeeQuery> getEmployees() {
@@ -27,14 +24,7 @@ public class TableDataOperationsTest extends AbstractDataOperationsTest {
 
     @BeforeMethod
     public void init() {
-        employees = new TestEmployeeTable();
-
-        employees.add(NAME0, "Doe", 10000, true, new byte[] { 1, 2, 3 }, new Date(), "extra", null);
-        employees.add(NAME2, "B. Good", 10000, true, new byte[] { 1, 2, 3 }, new Date(), true, null);
-        employees.insert(1, NAME1, "Mihajlovski", 30000, false, new byte[] { 4, 5 }, new Date(), 1234, null);
-
-        phones = new Object[][] { { "home", "123-123" }, { "mobile", "456-456" } };
-        employees.add(NAME3, "Bond", 150000, true, new byte[] { 0 }, new Date(), "x", phones);
+    	employees = getEmployeeTable();
     }
 
     private void setAndTestValue(long val) {
@@ -42,6 +32,11 @@ public class TableDataOperationsTest extends AbstractDataOperationsTest {
         assertEquals(val, employees.get(1).getSalary());
     }
 
+    @Test
+    public void shouldPrint() {
+    	super.shouldPrintData("TestEmployeeTable");
+    }
+    
     @Test
     public void shouldStoreValues() {
         setAndTestValue(Integer.MAX_VALUE);
@@ -64,7 +59,7 @@ public class TableDataOperationsTest extends AbstractDataOperationsTest {
     }
 
 
-    @Test(enabled=true)
+    @Test
     public void shouldDeleteAllButLast() {
         employees.moveLastOver(2);
         employees.moveLastOver(1);
