@@ -1,3 +1,10 @@
+09-September-2013:
+=================
++ Added Table.toString(), Table.toString(maxRows)
++ Added TableView.toString(), TableView.toString(maxRows),
++ Added Mixed.getReadableValue()
++ Added validation of parameters in all methods. Exceptions are now thrown if invalid parameters are passed. 
+
 06-September-2013:
 =================
 ! BUGFIX: Fixed small leak in TableQuery.
